fix alignment of button group widget

--- a/src/stylus/layout/widgets/buttonGroup/index.styl
+++ b/src/stylus/layout/widgets/buttonGroup/index.styl
@@ -3,12 +3,14 @@
 
 .nw-buttonGroup
     &--alignment_center
-        float: none;
+        //
 
 
     &--alignment_left
-        float: left;
+    &--alignment_right
+        position: absolute;
 
 
     &--alignment_right
-        float: right;
+        right: 0;
+        top: 0;
